# service-recovery-scheduler

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  build_srs.sh  main.cpp
.github/workflows/: ci.yml
cmake/: CommonAPI.cmake
docker/: entrypoint.sh
fidl/: CMakeLists.txt  RecoveryScheduler-DBus.fdepl  RecoveryScheduler.fdepl  RecoveryScheduler.fidl  ServiceRecoveryScheduler-DBus.fdepl  ServiceRecoveryScheduler.fdepl  ServiceRecoveryScheduler.fidl  commonapi4dbus.ini
gtest/: CMakeLists.txt
gtest/src/: CRecoverySchedulerStubImpl_gtest.cpp  CRecoveryScheduler_gtest.cpp  Common_gtest.cpp
lib_srs/: CMakeLists.txt
lib_srs/config/: recoveryConfig.Json
lib_srs/inc/: CRecoveryScheduler.hpp  CRecoverySchedulerStubImpl.hpp  CServiceRecoverySchedulerStubImpl.hpp  Common.hpp  Logger.hpp
lib_srs/src/: CRecoveryScheduler.cpp  CRecoverySchedulerStubImpl.cpp  CServiceRecoverySchedulerStubImpl.cpp
other_apps/: CMakeLists.txt  appA.cpp  appB.cpp  appC.cpp
other_apps_dummy/: CMakeLists.txt  appA.cpp  appB.cpp  appC.cpp
scripts/: bootstrap.sh  gen_report.py
systemd/: app_srs.service
